pamc/src/tests/sample_code/should_fail/scope/duplicate_forall_params.ph
let x = forall(Q: Type, Q: Type) { Type };
